--- a/week1.ipynb
+++ b/week1.ipynb
@@ -181,8 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
-    "# test\n"
+    "# Your code here\n# test\n"
    ]
   },
   {
